--- a/consulta.html
+++ b/consulta.html
@@ -33,7 +33,7 @@
 				<!-- box header -->
 				<div class="box-header no-transp">
 						<div class="box-logo">
-								<a href="index.html"><img src="assets/img/LOGOD2.png" width="130" alt="Logo"></a>
+								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
 						<a class="box-primary-nav-trigger" href="#0">
@@ -96,7 +96,7 @@
 						Con el diagnóstico establecido, proponemos un tratamiento preciso, adecuado y noble, utilizando los mejores protocolos a nivel internacional y con la tecnología más avanzada.
 					</p>
 					<p>
-						Además de las enfermedades de la piel, también somos expertos en tratamientos Dermocosméticos, con lo que mejoramos la apariencia de la piel, su textura y color, mejorando líneas de expresión y cicatrices.
+						Además de los padecimientos de la piel, también somos expertos en tratamientos Dermocosméticos, con lo que mejoramos la apariencia de la piel, su textura y color, mejorando líneas de expresión y cicatrices.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -110,10 +110,20 @@
 			
 		</div><!-- end container -->
 	</section>
-	<!-- PORTFOLIO -->
-	<section class="portfolio mt-50">
-		<div class="top-right-separator hidden-xs"></div>
+	<!-- SERVICES FILTER -->
+	<div class="top"></div>
+	<section id="tratamientos" class="portfolio mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background">
 		<div class="container">
+			<div class="row center">
+				<div class="col-md-8 col-md-offset-2 col-sm-12">
+					<div class="section-title-parralax">
+						<div class="process-numbers">02</div>
+						<h2>tratamientos</h2>
+						<p class="module-subtitle">Descubre el resto de los tratamientos que realizamos:
+						</p>
+					</div>
+				</div>
+			</div>
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid">
@@ -137,10 +147,10 @@
 							<img src="assets/img/consulta.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Consulta Especializada</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Consulta Especializada</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -148,41 +158,41 @@
 					<!-- single work -->
 					<div class="col-md-4 logo">
 						<a href="envejecimiento.html" class="portfolio_item work-grid">
-							<img src="assets/img/envejecimiento.jpg" alt="image">
+							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Manchas y Envejecimiento</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
-					<div class="col-md-4 web">
+					<div class="col-md-4 web logo">
 						<a href="dermatologia.html" class="portfolio_item work-grid">
 							<img src="assets/img/dermatologia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Dermatología Cosmética</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Dermatología Cosmética</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="##.html" class="portfolio_item work-grid">
+						<a href="depilacion.html" class="portfolio_item work-grid">
 							<img src="assets/img/depilaciong.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Depilación Definitiva</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Depilación Láser</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -193,66 +203,80 @@
 							<img src="assets/img/acneg.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Acné y Rosácea</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
-					<div class="col-md-4 web">
+					<div class="col-md-4 photography">
+						<a href="cancer.html" class="portfolio_item work-grid">
+							<img src="assets/img/envejecimiento.jpg" alt="image">
+							<div class="portfolio_item_hover">
+								<div class="item_info">
+									<em>leer más</em>
+								</div>
+							</div>
+							<p class="text-center">Tratamiento del Cáncer de Piel</p>
+						</a>
+					</div>
+					<!-- end single work -->
+
+					<!-- single work -->
+					<div class="col-md-4 logo web">
 						<a href="radiofrecuencia.html" class="portfolio_item work-grid">
 							<img src="assets/img/microdermo2.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>radiofrecuencia</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Radiofrecuencia</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="hidrodermoabrasion.html" class="portfolio_item work-grid">
+						<a href="dermoabrasion.html" class="portfolio_item work-grid">
 							<img src="assets/img/hombremetro.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>hidrodermoabrasión</span>
 									<em>leer más</em>
 								</div>
 							</div>
-						</a>
-					</div>
-					<!-- end single work -->
-
-					<!-- single work -->
-					<div class="col-md-4 logo">
-						<a href="microdermoabrasion.html" class="portfolio_item work-grid">
-							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<span>microdermoabrasión</span>
-									<em>leer más</em>
-								</div>
-							</div>
+							<p class="text-center">Microdermoabrasión e Hidrodermoabrasión</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="lunares-y-cancer.html" class="portfolio_item work-grid">
-							<img src="assets/img/molekid.jpg" alt="image">
+						<a href="peeling.html" class="portfolio_item work-grid">
+							<img src="assets/img/dermo.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>eliminación de lunares, verrugas y quistes</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Peeling</p>
+						</a>
+					</div>
+					<!-- end single work -->
+
+					<!-- single work -->
+					<div class="col-md-4 logo photography">
+						<a href="lunares.html" class="portfolio_item work-grid">
+							<img src="assets/img/molekid.jpg" alt="image">
+							<div class="portfolio_item_hover">
+								<div class="item_info">
+									<em>leer más</em>
+								</div>
+							</div>
+							<p class="text-center">Eliminación de lunares, verrugas y quistes</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -263,10 +287,10 @@
 							<img src="assets/img/unia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>padecimientos en uñas</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Padecimiento en uñas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -277,15 +301,13 @@
 							<img src="assets/img/pelo.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>caída del cabello</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Caída del cabello</p>
 						</a>
 					</div>
 					<!-- end single work -->
-
-					
 
 				</div>
 				<!-- end row -->
@@ -294,7 +316,7 @@
 		</div>
 		<!-- end container -->
 	</section>
-	<!-- portfolio -->
+	<!-- END SERVICES FILTER -->
 	<!-- Footer -->
 	<footer class="main-footer">
 		<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="100" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="svgcolor-light">
