--- a/microdermoabrasion.html
+++ b/microdermoabrasion.html
@@ -33,7 +33,7 @@
 				<!-- box header -->
 				<div class="box-header no-transp">
 						<div class="box-logo">
-								<a href="index.html"><img src="assets/img/LOGOD2.png" width="130" alt="Logo"></a>
+								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
 						<a class="box-primary-nav-trigger" href="#0">
@@ -73,7 +73,7 @@
 			<div class="row center">
 			<div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="section-title">
-					<h2>MICRODERMOABRASIÓN</h2>
+					<h2>HIDRODERMOABRASIÓN Y MICRODERMOABRASIÓN</h2>
 				</div>
 			</div>
 			</div>
@@ -81,7 +81,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Este procedimiento permite renovar las diferentes capas de la piel a través de la aplicación de diversas sustancias químicas. Después de ser valorado por nuestro Dermatólogo, se determina cuál es el más adecuado en tu caso y los cuidados que deberás tener.
+						Estos procedimientos permiten renovar las diferentes capas de la piel por medio de una turbina de agua, un succionado o una punta diamante. Se realiza una limpieza profunda que eliminará las células muertas e impurezas que se pueden encontrar en la piel de tu rostro. Después de ser valorado por nuestro Dermatólogo, se determina cuál es el más adecuado en tu caso y los cuidados que deberás tener.
 					</p>
 					<p>
 						Indicaciones:
@@ -106,10 +106,20 @@
 			
 		</div><!-- end container -->
 	</section>
-	<!-- PORTFOLIO -->
-	<section class="portfolio mt-50">
-		<div class="top-right-separator hidden-xs"></div>
+	<!-- SERVICES PARALAX -->
+	<div class="top"></div>
+	<section id="tratamientos" class="portfolio mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background">
 		<div class="container">
+			<div class="row center">
+				<div class="col-md-8 col-md-offset-2 col-sm-12">
+					<div class="section-title-parralax">
+						<div class="process-numbers">02</div>
+						<h2>tratamientos</h2>
+						<p class="module-subtitle">Dentro de los procedimientos que realizamos están:
+						</p>
+					</div>
+				</div>
+			</div>
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid">
@@ -133,10 +143,10 @@
 							<img src="assets/img/consulta.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Consulta Especializada</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Consulta Especializada</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -147,10 +157,10 @@
 							<img src="assets/img/envejecimiento.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Manchas y Envejecimiento</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -161,24 +171,24 @@
 							<img src="assets/img/dermatologia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Dermatología Cosmética</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Dermatología Cosmética</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="##.html" class="portfolio_item work-grid">
+						<a href="##" class="portfolio_item work-grid">
 							<img src="assets/img/depilaciong.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Depilación Definitiva</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Depilación Definitiva</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -189,10 +199,10 @@
 							<img src="assets/img/acneg.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Acné y Rosácea</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Acné y Rosácea</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -203,10 +213,10 @@
 							<img src="assets/img/microdermo2.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>radiofrecuencia</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Radiofrecuencia</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -217,10 +227,10 @@
 							<img src="assets/img/hombremetro.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>hidrodermoabrasión</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Hidrodermoabrasión</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -231,10 +241,10 @@
 							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>microdermoabrasión</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Microdermoabrasión</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -245,10 +255,10 @@
 							<img src="assets/img/molekid.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>eliminación de lunares, verrugas y quistes</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Eliminación de lunares, verrugas y quistes</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -259,10 +269,10 @@
 							<img src="assets/img/unia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>padecimientos en uñas</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Padecimiento en uñas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -273,10 +283,24 @@
 							<img src="assets/img/pelo.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>caída del cabello</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Caída del cabello</p>
+						</a>
+					</div>
+					<!-- end single work -->
+
+					<!-- single work -->
+					<div class="col-md-4 photography">
+						<a href="pelo.html" class="portfolio_item work-grid">
+							<img src="assets/img/envejecimiento.jpg" alt="image">
+							<div class="portfolio_item_hover">
+								<div class="item_info">
+									<em>leer más</em>
+								</div>
+							</div>
+							<p class="text-center">Tratamiento del Cáncer de Piel</p>
 						</a>
 					</div>
 					<!-- end single work -->
