--- a/dermatologia.html
+++ b/dermatologia.html
@@ -33,7 +33,7 @@
 				<!-- box header -->
 				<div class="box-header no-transp">
 						<div class="box-logo">
-								<a href="index.html"><img src="assets/img/LOGOD2.png" width="130" alt="Logo"></a>
+								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
 						<a class="box-primary-nav-trigger" href="#0">
@@ -82,21 +82,17 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Durante el tratamiento de Luz Pulsada, se aplican de forma segura y suave, destellos concentrados de luz que tratan las manchas por el sol, edad, la piel laxa y arrugas, lo que propiciar la producción de colágeno y promueve la reestructuración de la piel.
+						Constantemente, nuestro rostro, cuello, escote y manos se ven alterados por la exposición solar, la contaminación y el paso del tiempo. Existen múltiples tratamientos que permiten mejorar la apariencia, textura y firmeza de la piel, de forma segura y sin necesidad de cambiar tus actividades habituales. 
 					</p>
 					<p>
-						Este tratamiento está indicado para el tratamiento de:
+						La aplicación de toxina o ácido hialurónico por médicos especialistas permite mejorar la apariencia de las líneas de expresión y surcos, de una forma natural y discreta, ya que no se pierde expresividad ni se alteran las facciones del paciente.
 					</p>
-					<ul class="services-list">
-						<li>Acné</li>
-						<li>Rosácea</li>
-						<li>Melasma (paño)</li>
-						<li>Irregularidades de pigmentación</li>
-					</ul>
 					<p>
-						El tratamiento de Luz Pulsada está diseñado para ofrecerle su mejor cara y revelar una piel suave y saludable. 
+						El tratamiento no es doloroso gracias a la utilización de crema anestésica, y podrás continuar con tus actividades normales en pocas horas. 
 					</p>
-					
+					<p>
+						¡Nuestro Dermatólogo te valorará y ayudará a determinar qué tratamiento es el más adecuado para tu tipo de piel!
+					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
 					<h5 class="share-title">Comparte</h5>
@@ -109,10 +105,20 @@
 			
 		</div><!-- end container -->
 	</section>
-	<!-- PORTFOLIO -->
-	<section class="portfolio mt-50">
-		<div class="top-right-separator hidden-xs"></div>
+	<!-- SERVICES FILTER -->
+	<div class="top"></div>
+	<section id="tratamientos" class="portfolio mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background">
 		<div class="container">
+			<div class="row center">
+				<div class="col-md-8 col-md-offset-2 col-sm-12">
+					<div class="section-title-parralax">
+						<div class="process-numbers">02</div>
+						<h2>tratamientos</h2>
+						<p class="module-subtitle">Descubre el resto de los tratamientos que realizamos:
+						</p>
+					</div>
+				</div>
+			</div>
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid">
@@ -136,10 +142,10 @@
 							<img src="assets/img/consulta.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Consulta Especializada</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Consulta Especializada</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -147,41 +153,41 @@
 					<!-- single work -->
 					<div class="col-md-4 logo">
 						<a href="envejecimiento.html" class="portfolio_item work-grid">
-							<img src="assets/img/envejecimiento.jpg" alt="image">
+							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Manchas y Envejecimiento</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
-					<div class="col-md-4 web">
+					<div class="col-md-4 web logo">
 						<a href="dermatologia.html" class="portfolio_item work-grid">
 							<img src="assets/img/dermatologia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Dermatología Cosmética</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Dermatología Cosmética</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="##.html" class="portfolio_item work-grid">
+						<a href="depilacion.html" class="portfolio_item work-grid">
 							<img src="assets/img/depilaciong.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Depilación Definitiva</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Depilación Láser</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -192,66 +198,80 @@
 							<img src="assets/img/acneg.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>Luz Pulsada Intensa para Acné y Rosácea</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Luz Pulsada Intensa para Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
-					<div class="col-md-4 web">
+					<div class="col-md-4 photography">
+						<a href="cancer.html" class="portfolio_item work-grid">
+							<img src="assets/img/envejecimiento.jpg" alt="image">
+							<div class="portfolio_item_hover">
+								<div class="item_info">
+									<em>leer más</em>
+								</div>
+							</div>
+							<p class="text-center">Tratamiento del Cáncer de Piel</p>
+						</a>
+					</div>
+					<!-- end single work -->
+
+					<!-- single work -->
+					<div class="col-md-4 logo web">
 						<a href="radiofrecuencia.html" class="portfolio_item work-grid">
 							<img src="assets/img/microdermo2.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>radiofrecuencia</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Radiofrecuencia</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="hidrodermoabrasion.html" class="portfolio_item work-grid">
+						<a href="dermoabrasion.html" class="portfolio_item work-grid">
 							<img src="assets/img/hombremetro.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>hidrodermoabrasión</span>
 									<em>leer más</em>
 								</div>
 							</div>
-						</a>
-					</div>
-					<!-- end single work -->
-
-					<!-- single work -->
-					<div class="col-md-4 logo">
-						<a href="microdermoabrasion.html" class="portfolio_item work-grid">
-							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<span>microdermoabrasión</span>
-									<em>leer más</em>
-								</div>
-							</div>
+							<p class="text-center">Microdermoabrasión e Hidrodermoabrasión</p>
 						</a>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="lunares-y-cancer.html" class="portfolio_item work-grid">
-							<img src="assets/img/molekid.jpg" alt="image">
+						<a href="peeling.html" class="portfolio_item work-grid">
+							<img src="assets/img/dermo.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>eliminación de lunares, verrugas y quistes</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Peeling</p>
+						</a>
+					</div>
+					<!-- end single work -->
+
+					<!-- single work -->
+					<div class="col-md-4 logo photography">
+						<a href="lunares.html" class="portfolio_item work-grid">
+							<img src="assets/img/molekid.jpg" alt="image">
+							<div class="portfolio_item_hover">
+								<div class="item_info">
+									<em>leer más</em>
+								</div>
+							</div>
+							<p class="text-center">Eliminación de lunares, verrugas y quistes</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -262,10 +282,10 @@
 							<img src="assets/img/unia.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>padecimientos en uñas</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Padecimiento en uñas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -276,15 +296,13 @@
 							<img src="assets/img/pelo.jpg" alt="image">
 							<div class="portfolio_item_hover">
 								<div class="item_info">
-									<span>caída del cabello</span>
 									<em>leer más</em>
 								</div>
 							</div>
+							<p class="text-center">Caída del cabello</p>
 						</a>
 					</div>
 					<!-- end single work -->
-
-					
 
 				</div>
 				<!-- end row -->
@@ -293,7 +311,7 @@
 		</div>
 		<!-- end container -->
 	</section>
-	<!-- portfolio -->
+	<!-- END SERVICES FILTER -->
 	<!-- Footer -->
 	<footer class="main-footer">
 		<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="100" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="svgcolor-light">
