--- a/acne.html
+++ b/acne.html
@@ -91,7 +91,7 @@
 						Algunos factores que desencadenan los episodios de acné son los cambios de clima (el calor y la humedad aumentan los brotes), el uso de productos inadecuados para nuestro tipo de piel, los cambios hormonales y el uso de algunos medicamentos, así como la alimentación, entre otros. 
 					</p>
 					<p>
-						En nuestra clínica realizamos tratamientos para el acné, así como tratamientos para las secuelas del mismo, mediante excelentes medicamentos y tecnología láser.
+						En nuestra clínica realizamos tratamientos para el acné, así como tratamientos para las secuelas del mismo, mediante tratamiento médico y tecnología láser.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -201,7 +201,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Acné</p>
+							<p class="text-center">Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -322,7 +322,7 @@
                     <!-- Start Twitter Widget -->
                     <div class="col-md-9 col-xs-12">
                         <div class="footer-widget contact-widget">
-							Email: contacto@dermos.com.mx <br>
+							Email: <a href="mailto:contacto@dermos.com.mx" class="facebook">contacto@dermos.com.mx</a><br>
 							Teléfono: (55) 6549-0142 | (55) 7156-5392 <br>
 							<a class="facebook" href="aviso-de-privacidad.html">Consulta Nuestro Aviso de Privacidad</a>
                         </div>
