--- a/aviso-de-privacidad.html
+++ b/aviso-de-privacidad.html
@@ -110,7 +110,7 @@
                     <!-- Start Twitter Widget -->
                     <div class="col-md-9 col-xs-12">
                         <div class="footer-widget contact-widget">
-							Email: contacto@dermos.com.mx <br>
+							Email: <a href="mailto:contacto@dermos.com.mx" class="facebook">contacto@dermos.com.mx</a><br>
 							Teléfono: (55) 6549-0142 | (55) 7156-5392 <br>
 							<a class="facebook" href="aviso-de-privacidad.html">Consulta Nuestro Aviso de Privacidad</a>
                         </div>
@@ -122,10 +122,10 @@
                         <div class="footer-widget company-links">
                             <h4>Clínica Dermos</h4>
 							<ul class="footer-links">
-								<li><a href="index.html">Nosotros</a></li>
+								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html#clients">Instalaciones</a></li>
+								<li><a href="index.html#contact">Contacto</a></li>
 							</ul>
                         </div>
                     </div><!-- .col-md-3 -->
