--- a/dermatologia.html
+++ b/dermatologia.html
@@ -31,28 +31,28 @@
 	<header class="main-header">
 		<div class="container-fluid">
 				<!-- box header -->
-				<div class="box-header no-transp">
+				<div class="box-header">
 						<div class="box-logo">
 								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
-						<a class="box-primary-nav-trigger" href="#0">
+						<span class="box-primary-nav-trigger" id="menu-close">
 								<span class="box-menu-icon"></span>
-						</a>
+						</span>
 						<!-- box-primary-nav-trigger -->
 				</div>
 				<!-- end box header -->
 
 				<!-- nav -->
-				<nav>
+				<nav id="sidebar">
 						<ul class="box-primary-nav">
 								<li class="box-label">DERMOS</li>
 
-								<li><a href="index.html">Inicio</a> <i class="lnr lnr-home"></i></li>
-								<li><a href="index.html">Nosotros</a></li>
-								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html" onclick = $("#is-click").click(); >Inicio</a> <i class="lnr lnr-home"></i></li>
+								<li><a href="index.html#team" onclick = $("#menu-close").click();>Nosotros</a></li>
+								<li><a href="index.html#trats" onclick = $("#menu-close").click();>Tratamientos</a></li>
+								<li><a href="index.html#clients" onclick = $("#menu-close").click();>Instalaciones</a></li>
+								<li><a href="index.html#contact" onclick = $("#menu-close").click();>Contacto</a></li>
 
 								<li class="box-label">ÚNETE</li>
 
@@ -82,16 +82,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Constantemente, nuestro rostro, cuello, escote y manos se ven alterados por la exposición solar, la contaminación y el paso del tiempo. Existen múltiples tratamientos que permiten mejorar la apariencia, textura y firmeza de la piel, de forma segura y sin necesidad de cambiar tus actividades habituales. 
-					</p>
-					<p>
-						La aplicación de toxina o ácido hialurónico por médicos especialistas permite mejorar la apariencia de las líneas de expresión y surcos, de una forma natural y discreta, ya que no se pierde expresividad ni se alteran las facciones del paciente.
-					</p>
-					<p>
-						El tratamiento no es doloroso gracias a la utilización de crema anestésica, y podrás continuar con tus actividades normales en pocas horas. 
-					</p>
-					<p>
-						¡Nuestro Dermatólogo te valorará y ayudará a determinar qué tratamiento es el más adecuado para tu tipo de piel!
+						Consiente tu piel para que luzca visiblemente más joven a través de nuestro experto, quien junto contigo elegirán el tratamiento más adecuado para ti y tú piel.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -201,7 +192,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Acné</p>
+							<p class="text-center">Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -322,7 +313,7 @@
                     <!-- Start Twitter Widget -->
                     <div class="col-md-9 col-xs-12">
                         <div class="footer-widget contact-widget">
-							Email: contacto@dermos.com.mx <br>
+							Email: <a href="mailto:contacto@dermos.com.mx" class="facebook">contacto@dermos.com.mx</a><br>
 							Teléfono: (55) 6549-0142 | (55) 7156-5392 <br>
 							<a class="facebook" href="aviso-de-privacidad.html">Consulta Nuestro Aviso de Privacidad</a>
                         </div>
@@ -334,10 +325,10 @@
                         <div class="footer-widget company-links">
                             <h4>Clínica Dermos</h4>
 							<ul class="footer-links">
-								<li><a href="index.html">Nosotros</a></li>
+								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html#clients">Instalaciones</a></li>
+								<li><a href="index.html#contact">Contacto</a></li>
 							</ul>
                         </div>
                     </div><!-- .col-md-3 -->
