--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
-						<a class="box-primary-nav-trigger" href="#0">
+						<span class="box-primary-nav-trigger" id="menu-close">
 								<span class="box-menu-icon"></span>
-						</a>
+						</span>
 						<!-- box-primary-nav-trigger -->
 				</div>
 				<!-- end box header -->
@@ -49,10 +49,10 @@
 								<li class="box-label">DERMOS</li>
 
 								<li><a href="#" onclick = $("#is-click").click(); >Inicio</a> <i class="lnr lnr-home"></i></li>
-								<li><a href="#" onclick = $("#is-click").click();>Nosotros</a></li>
-								<li><a href="#" onclick = $("#is-click").click();>Tratamientos</a></li>
-								<li><a href="#" onclick = $("#is-click").click();>Instalaciones</a></li>
-								<li><a href="#" onclick = $("#is-click").click();>Contacto</a></li>
+								<li><a href="#team" onclick = $("#menu-close").click();>Nosotros</a></li>
+								<li><a href="#trats" onclick = $("#menu-close").click();>Tratamientos</a></li>
+								<li><a href="#clients" onclick = $("#menu-close").click();>Instalaciones</a></li>
+								<li><a href="#contact" onclick = $("#menu-close").click();>Contacto</a></li>
 
 								<li class="box-label">ÚNETE</li>
 
@@ -155,7 +155,7 @@
 	</section>
 
 	<!-- SERVICES PARALAX -->
-	<section class="portfolio mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" style="background-image: url(assets/img/polyshape.png);">
+	<section id="trats" class="portfolio mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" style="background-image: url(assets/img/polyshape.png);">
 		<div class="container">
 			<div class="section-overlay"></div>
 			<div class="row center">
@@ -250,7 +250,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Acné</p>
+							<p class="text-center">Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -363,7 +363,7 @@
 	<!-- END SERVICES FILTER -->
 
 	<!-- CLIENTS -->
-	<div id="clients" id="insta" class="carrousel mbr-box mbr-section">
+	<div id="clients" class="carrousel mbr-box mbr-section">
 		<div class="container">
 			<div class="row center">
 				<div class="col-md-8 col-md-offset-2 col-sm-12">
@@ -440,8 +440,7 @@
                             <h4><span>Conoce nuestros horarios</span></h4>
                             <h3>Visítanos</h3>
                             <p>
-                                L-V: 8 AM - 4 PM<br>
-                                S: 8 AM - 12 PM<br>
+                                L-S: 9 AM - 2 PM<br>
                                 D: Cerrado
                             </p>
                         </div>
@@ -463,7 +462,7 @@
                     <!-- Start Twitter Widget -->
                     <div class="col-md-9 col-xs-12">
                         <div class="footer-widget contact-widget">
-							Email: contacto@dermos.com.mx <br>
+							Email: <a href="mailto:contacto@dermos.com.mx" class="facebook">contacto@dermos.com.mx</a><br>
 							Teléfono: (55) 6549-0142 | (55) 7156-5392 <br>
 							<a class="facebook" href="aviso-de-privacidad.html">Consulta Nuestro Aviso de Privacidad</a>
                         </div>
@@ -475,10 +474,10 @@
                         <div class="footer-widget company-links">
                             <h4>Clínica Dermos</h4>
 							<ul class="footer-links">
-								<li><a href="index.html">Nosotros</a></li>
+								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html#clients">Instalaciones</a></li>
+								<li><a href="index.html#contact">Contacto</a></li>
 							</ul>
                         </div>
                     </div><!-- .col-md-3 -->
@@ -553,6 +552,18 @@
 		});
 	</script>
 	<script>
+    // Para cerrar el menú lateral
+    $("#menu-close").click(function(e) {
+        e.preventDefault();
+        $("#box-primary-nav").toggleClass("active");
+    });
+
+    // Para abrir el menú lateral
+    /*$("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });*/
+
     // Script para redirigir con scroll a la sección elegida
     $(function() {
         $('a[href*=#]:not([href=#])').click(function() {
@@ -569,6 +580,6 @@
             }
         });
     });
-    </script>-->
+    </script>
 </body>
 </html>
