--- a/peeling.html
+++ b/peeling.html
@@ -31,28 +31,28 @@
 	<header class="main-header">
 		<div class="container-fluid">
 				<!-- box header -->
-				<div class="box-header no-transp">
+				<div class="box-header">
 						<div class="box-logo">
 								<a href="index.html"><img src="assets/img/LOGOD2.png" width="200" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
-						<a class="box-primary-nav-trigger" href="#0">
+						<span class="box-primary-nav-trigger" id="menu-close">
 								<span class="box-menu-icon"></span>
-						</a>
+						</span>
 						<!-- box-primary-nav-trigger -->
 				</div>
 				<!-- end box header -->
 
 				<!-- nav -->
-				<nav>
+				<nav id="sidebar">
 						<ul class="box-primary-nav">
 								<li class="box-label">DERMOS</li>
 
-								<li><a href="index.html">Inicio</a> <i class="lnr lnr-home"></i></li>
-								<li><a href="index.html">Nosotros</a></li>
-								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html" onclick = $("#is-click").click(); >Inicio</a> <i class="lnr lnr-home"></i></li>
+								<li><a href="index.html#team" onclick = $("#menu-close").click();>Nosotros</a></li>
+								<li><a href="index.html#trats" onclick = $("#menu-close").click();>Tratamientos</a></li>
+								<li><a href="index.html#clients" onclick = $("#menu-close").click();>Instalaciones</a></li>
+								<li><a href="index.html#contact" onclick = $("#menu-close").click();>Contacto</a></li>
 
 								<li class="box-label">ÚNETE</li>
 
@@ -64,7 +64,7 @@
 	</header>
 
 	<!-- HERO SECTION  -->
-	<div class="site-hero_9">
+	<div class="site-hero_14">
 	</div>
 
 
@@ -202,7 +202,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Acné</p>
+							<p class="text-center">Acné</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -323,7 +323,7 @@
                     <!-- Start Twitter Widget -->
                     <div class="col-md-9 col-xs-12">
                         <div class="footer-widget contact-widget">
-							Email: contacto@dermos.com.mx <br>
+							Email: <a href="mailto:contacto@dermos.com.mx" class="facebook">contacto@dermos.com.mx</a><br>
 							Teléfono: (55) 6549-0142 | (55) 7156-5392 <br>
 							<a class="facebook" href="aviso-de-privacidad.html">Consulta Nuestro Aviso de Privacidad</a>
                         </div>
@@ -335,10 +335,10 @@
                         <div class="footer-widget company-links">
                             <h4>Clínica Dermos</h4>
 							<ul class="footer-links">
-								<li><a href="index.html">Nosotros</a></li>
+								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
-								<li><a href="index.html">Instalaciones</a></li>
-								<li><a href="index.html">Contacto</a></li>
+								<li><a href="index.html#clients">Instalaciones</a></li>
+								<li><a href="index.html#contact">Contacto</a></li>
 							</ul>
                         </div>
                     </div><!-- .col-md-3 -->
