--- a/index.html
+++ b/index.html
@@ -125,17 +125,18 @@
                 <div class="team-member col-md-112 col-sm-12 text-center">
                     <div class="member-thumb">
                     	<div class="cover"><div class="cover-inner-left"></div></div>
-                        <img src="assets/img/team/doctore.jpg" alt="Team Member" class="img-responsive">
+                        <img src="assets/img/team/doctore.jpg" alt="Doctor Javier Martinez" class="img-responsive hideresp">
+                        <img src="assets/img/team/doctorer.jpg" alt="Doctor Javier Martinez" class="img-responsive showresp" style="display: none;">
                         <div class="team_cover"><div class="team_cover_inner"></div></div>
                         <div class="overlay">
                             <h6 style="margin-top: -60px;">Cédula Profesional. 5071448</h6>
                             <h6 style="margin-top: 0px;">Cédula de Especialidad. 09116351</h6>
                             <div class="row">
                             	<div class="col-md-6 col-sm-6 text-left">
-                            		<p style="text-align: left; padding-left: 50px; padding-right: 50px;">&bull;&nbsp;Especialista en Dermatología egresado del Centro Dermatológico “Dr. Ladislao de la Pascua” avalado por la Universidad Nacional Autónoma de México.<br>&bull;&nbsp;Alta especialidad en Cirugía Dermatológica y Cáncer de piel, certificado por el Consejo Mexicano de Dermatología.</p>
+                            		<p class="infodoc">&bull;&nbsp;Especialista en Dermatología egresado del Centro Dermatológico “Dr. Ladislao de la Pascua” avalado por la Universidad Nacional Autónoma de México.<br>&bull;&nbsp;Alta especialidad en Cirugía Dermatológica y Cáncer de piel, certificado por el Consejo Mexicano de Dermatología.</p>
                             	</div>
                             	<div class="col-md-6 col-sm-6 text-left">
-                            		<p style="text-align: left; padding-left: 50px; padding-right: 50px;">&bull;&nbsp;Certificado Consejo Mexicano de Dermatología número 1416, vigente hasta Mayo de 2019.<br>&bull;&nbsp;Estudios de Medicina Interna en el Hospital General Dr. Darío Fernández Fierro - ISSSTE<br>&bull;&nbsp;Médico Cirujano y Partero por la Universidad de Guadalajara.</p>
+                            		<p class="infodoc">&bull;&nbsp;Certificado Consejo Mexicano de Dermatología número 1416, vigente hasta Mayo de 2019.<br>&bull;&nbsp;Estudios de Medicina Interna en el Hospital General Dr. Darío Fernández Fierro - ISSSTE<br>&bull;&nbsp;Médico Cirujano y Partero por la Universidad de Guadalajara.</p>
                             	</div>
                             </div>
                         </div>
@@ -201,155 +202,177 @@
 
 					<!-- single work -->
 					<div class="col-md-4 logo">
-						<a href="envejecimiento.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/radiofrecuenciag.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="envejecimiento.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
-						</a>
+								<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web logo">
-						<a href="dermatologia.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/dermatologia.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="dermatologia.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Dermatología Cosmética</p>
-						</a>
+								<p class="text-center">Dermatología Cosmética</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="depilacion.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/depilaciong.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="depilacion.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Depilación Láser</p>
-						</a>
+								<p class="text-center">Depilación Láser</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 photography">
-						<a href="acne.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/acneg.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="acne.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Acné</p>
-						</a>
+								<p class="text-center">Acné</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 photography">
-						<a href="cancer.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/envejecimiento.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="cancer.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Tratamiento del Cáncer de Piel</p>
-						</a>
+								<p class="text-center">Tratamiento del Cáncer de Piel</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 logo web">
-						<a href="radiofrecuencia.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/microdermo2.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="radiofrecuencia.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Radiofrecuencia</p>
-						</a>
+								<p class="text-center">Radiofrecuencia</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="dermoabrasion.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/hombremetro.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="dermoabrasion.html">	
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Microdermoabrasión e Hidrodermoabrasión</p>
-						</a>
+								<p class="text-center">Microdermoabrasión e Hidrodermoabrasión</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 web">
-						<a href="peeling.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/dermo.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="peeling.html">	
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Peeling</p>
-						</a>
+								<p class="text-center">Peeling</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 logo photography">
-						<a href="lunares.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/molekid.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="lunares.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Eliminación de lunares, verrugas y quistes</p>
-						</a>
+								<p class="text-center">Eliminación de lunares, verrugas y quistes</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 photography">
-						<a href="unias.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/unia.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="unias.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Padecimiento en uñas</p>
-						</a>
+								<p class="text-center">Padecimiento en uñas</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
 					<!-- single work -->
 					<div class="col-md-4 photography">
-						<a href="pelo.html" class="portfolio_item work-grid">
+						<span class="portfolio_item work-grid">
 							<img src="assets/img/pelo.jpg" alt="image">
-							<div class="portfolio_item_hover">
-								<div class="item_info">
-									<em>leer más</em>
+							<a href="pelo.html">
+								<div class="portfolio_item_hover">
+									<div class="item_info">
+										<em>leer más</em>
+									</div>
 								</div>
-							</div>
-							<p class="text-center">Caída del cabello</p>
-						</a>
+								<p class="text-center">Caída del cabello</p>
+							</a>
+						</span>
 					</div>
 					<!-- end single work -->
 
